// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> renders correctly 1`] = `
<div
  className="css-pgcax9"
  color="red"
  fontFamily="body"
  fontSize="body"
  fontWeight="body"
  height="100%"
  onBlur={[Function]}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
/>
`;

exports[`<Box with props /> renders correctly with props 1`] = `
<div
  className="css-1jnu2ye"
  color="black"
  fontFamily="body"
  fontSize={16}
  fontWeight="body"
  height={90}
  onBlur={[Function]}
  onClick={[Function]}
  onMouseDown={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
  onMouseUp={[Function]}
  width={600}
/>
`;
